# ldth-2025-acoustics

./: .gitignore  LICENSE  README.md  dashboard.py  load.py  pyproject.toml
src/ldth_drone_acoustics/: __init__.py
src/ldth_drone_acoustics/setup/: download_raw_data.py
training/: Home.py  data_loader.py  eval_model.py  inference_eval.py  log_convert.py  notes.txt  train_cnn.py
training/pages/: 1_Waveform.py  2_Log_Mel_Spectrograms.py
training/test_data/: X_test_logmel_v1.1.npy  y_test_logmel_v1.1.npy
